--- a/LoginElSalto/MainWindow.xaml
+++ b/LoginElSalto/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginElSalto"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Login El Salto" Height="450" Width="800">
     <Grid Margin="20px" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Height="300">
         <!--Document Format-->
         <Grid.ColumnDefinitions>
