--- a/PlantasDALC/App.xaml
+++ b/PlantasDALC/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Login.App"
+﻿<Application x:Class="PlantasDALC.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Login"
+             xmlns:local="clr-namespace:PlantasDALC"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
