--- a/PlantasGUI/App.xaml
+++ b/PlantasGUI/App.xaml
@@ -4,6 +4,25 @@
              xmlns:local="clr-namespace:PlantasGUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ControlTemplate x:Key="TextBoxErrorTemplate">
+
+            <Border BorderBrush="Red" BorderThickness="2">
+
+                <Grid>
+
+                    <AdornedElementPlaceholder/>
+                    <TextBlock
+
+                    Text="{Binding [0].ErrorContent}"
+
+                    Foreground="Red" VerticalAlignment="Center"
+
+                    HorizontalAlignment="Right" Margin="0,0,4,0"/>
+
+                </Grid>
+
+            </Border>
+
+        </ControlTemplate>
     </Application.Resources>
 </Application>
