--- a/PlantasGUI/Views/ActualizarPlantas.xaml
+++ b/PlantasGUI/Views/ActualizarPlantas.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PlantasGUI.Views.AgregarPlantas"
+﻿<Window x:Class="PlantasGUI.Views.ActualizarPlantas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,8 @@
         xmlns:local="clr-namespace:PlantasGUI.Views"
         xmlns:validations="clr-namespace:PlantasGUI.Validations"
         mc:Ignorable="d"
-        Title="AgregarPlantas" Height="500" Width="800">
+        Title="ActualizarPlantas" Height="500" Width="800">
     <Grid Margin="20" Width="400" VerticalAlignment="Top" HorizontalAlignment="Left" Height="400">
-
         <!--Document Format-->
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -112,5 +111,6 @@
 
         <!--Button-->
         <Button x:Name="btnGuardar" Grid.Column="2" Grid.Row="18" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Guardar Planta" Click="btnGuardar_Click"/>
+        <TextBox x:Name="txtIndex" Grid.Row="18" Visibility="Hidden"/>
     </Grid>
 </Window>
